--- a/TP1.html
+++ b/TP1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ma première page HTML</title>
+    <title>The KING TIDI</title>
     <style>
         body {
             font-family: Arial, sans-serif;
